GNOME Bugzilla – Bug 770185
Touchscreen: Impossible drag or close xwayland apps window touching the window title bar
Last modified: 2018-05-26 20:22:31 UTC
steps to reproduce start Gnome on Wayland session from GDM login manager open any gtk2 (gimp), qt4 (vlc player) or qt5 (qupzilla or smplayer) app use touchscreen to drag or close the app window nothing happens, touchscreen does no effect on window title bar This problem does not happen with gtk3 apps running under Wayland. Tested on Antergos (Arch-based).
This problem is still present on 3.24 RC.
Identical behaviour still seen on 3.24.2 Weirdly enough it also seems to affect Firefox, despite that having been built with --enable-default-toolkit=cairo-gtk3 Is this on any dev's radar? It's been a problem for two releases now.
Strangely enough, I see the inverse behaviour with a pen (on a Surface Pro 3) - GIMP, SMPlayer, Firefox are all movable via the titlebar with the pen, whereas e.g. Files, Evolution, gedit are not.
Sorry for spamming this bug... when using the pen, the close button works in all cases, but for touch, the functionality of close matches that of drag.
(In reply to Stephen from comment #2) > Weirdly enough it also seems to affect Firefox, despite that having been > built with --enable-default-toolkit=cairo-gtk3 > Firefox gtk3 runs under xwayland.
I can confirm this with Firefox. If I use a theme that has its own close button, it works just fine.
Gnome 3.26 has the same problem.
reported on Ubuntu as well, https://bugs.launchpad.net/gnome-shell/+bug/1728412
*** Bug 786910 has been marked as a duplicate of this bug. ***
*** Bug 774947 has been marked as a duplicate of this bug. ***
Can confirm this for Shell 3.26.2 and mutter 3.26.2 on Arch Linux. I can't interact with the titlebar of XWayland apps via touchscreen. After dismissing the onscreen keyboard I can't get it back by tapping on a text entry field.
Gnome 3.28 has the same problem on Arch Linux.
Not only on Arch; confirming it's also present on openSUSE Tumbleweed with Gnome 3.28
And with Fedora. This bug has now been around for four GNOME releases... It's mystifying that lots of GNOME's design seems geared towards "touch friendliness", but a crippling touch bug has gone untouched for so long. BTW pen control (CSD window dragging etc.) is now fine under GNOME Wayland.
The last time I looked into this, it was a whole lot more troublesome. Events on the frame came from the GDK display connection, this brought 2 series of problems: 1) In X11 this is a second display connection, explicitly handling touch events there got in all sorts of weird interactions with the primary display connection, and the passive touch grab we set up there for touch gestures. This basically introduced a triple handling of the same events: a) From the passive grab b) The touch events as requested by XISelectEvents c) The XIPointerEmulated variant of the same touch events from b) 2) In wayland, this meant events still came from the only X11 connection we have, so the route of events was: libinput->clutter->mutter->xwayland->gdk->mutter->frame Fortunately, the large refactors needed to accomodate this neatly have happened over time, so it's gotten much saner to implement now. See https://gitlab.gnome.org/GNOME/mutter/merge_requests/78
https://gitlab.gnome.org/GNOME/mutter/merge_requests/78 was merged to master earlier today. And I've just cherry picked to 3.28.
Thanks for the patches; moving around windows and closing them now works. However, moving maximised windows by grabbing them from the top-bar in gnome-shell still does not work. Works on Xorg though. As of commit 235c3518.
Thanks for testing! Please file a gnome-shell issue for that, as the code allowing maximized window dragging from the top bar is there.
Almost 2 years since this was opened and still having this problem on both of my touchscreen thinkpads... Can't interact with the window bars at all on some applications. X220 Tablet and Yoga 20C0 both with Arch Linux, kernel 4.16.11-1-ARCH and GNOME 3.28.2-1.
(In reply to Carlos Garnacho from comment #18) > Thanks for testing! Please file a gnome-shell issue for that, as the code > allowing maximized window dragging from the top bar is there. I think it is this: https://gitlab.gnome.org/GNOME/gnome-shell/issues/191 Although the bug references top-icon plus, basically, most things on the top bar don't respond to touch any more. Try caffeine, or the "Do not disturb button", etc.
comment #17 actually is https://gitlab.gnome.org/GNOME/gnome-shell/merge_requests/112. The bug(s) you reference are actually in those individual extensions, that they get touch handling "for free" on Xorg is just a byproduct. Those extensions ought to additionally handle CLUTTER_TOUCH_BEGIN/UPDATE/END.