frames: Make 1st button/motion handlers take generic events

This will ease handling of touch events through these same handlers.

https://bugzilla.gnome.org/show_bug.cgi?id=770185